sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: '=' expected but ';' found.
  while (ecart>1 || changement){
^